# DirectX12-Render-Engine

./: .gitignore  CMakeLists.txt  DX12RenderEngine.sln  DX12RenderEngine.vcxproj  DX12RenderEngine.vcxproj.filters  GenerateSolution.bat  LICENSE  README.md
code/: Helpers.h  main.cpp
code/DX12Lib/: CMakeLists.txt
code/DX12Lib/inc/: Adapter.h  Application.h  Buffer.h  Camera.h  CameraController.h  CommandList.h  CommandQueue.h  DX12LibPCH.h  DescriptorAllocation.h  DescriptorAllocator.h  DescriptorAllocatorPage.h  Device.h  DynamicDescriptorHeap.h  Events.h  GUISystem.h  GenerateMipsPSO.h  Helpers.h  HighResolutionClock.h  IndexBuffer.h  Input.h  KeyCodes.h  Light.h  Material.h  Mesh.h  RenderApp.h  RenderTarget.h  Resource.h  ResourceStateTracker.h  RootSignature.h  SwapChain.h  Texture.h  UploadBuffer.h  VertexBuffer.h  Window.h
code/DX12Lib/shaders/: GenerateMips_CS.hlsl
code/DX12Lib/src/: Adapter.cpp  Application.cpp  Buffer.cpp  Camera.cpp  CameraController.cpp  CommandList.cpp  CommandQueue.cpp  DescriptorAllocation.cpp  DescriptorAllocator.cpp  DescriptorAllocatorPage.cpp  Device.cpp  DynamicDescriptorHeap.cpp  GUISystem.cpp  GenerateMipsPSO.cpp  HighResolutionClock.cpp  IndexBuffer.cpp  Material.cpp  Mesh.cpp  RenderApp.cpp  RenderTarget.cpp  Resource.cpp  ResourceStateTracker.cpp  RootSignature.cpp  SwapChain.cpp  Texture.cpp  UploadBuffer.cpp  VertexBuffer.cpp  Window.cpp
code/Demo/: CMakeLists.txt
code/Demo/inc/: Demo.h
code/Demo/shaders/: PixelShader.hlsl  VertexShader.hlsl
code/Demo/src/: Demo.cpp  main.cpp
data/Shaders/: PixelShader.hlsl  VertexShader.hlsl
